--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
         run: go build -v ./...
 
       - name: Test
-        run: go test -v ./...
+        run: go test -v -race -coverprofile=coverage.out -covermode=atomic ./...
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
